# autoconf

./: Makefile.am  README.md  a.c  configure.ac
lib/: Makefile.am  b.c  b.h  thread.c  thread.h
src/: Makefile.am  c.c  c.h  d.c  d.h
